--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--suppress ALL -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -63,8 +64,6 @@
             app:layout_constraintTop_toBottomOf="@+id/etAddressSignupFragment"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/ic_add"
-            android:src="@drawable/top_backgroun_profile"
             tools:layout_editor_absoluteX="139dp"
             tools:layout_editor_absoluteY="536dp" />
 
